--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,1 +1,88 @@
-../heatchain/Cargo.toml
+[package]
+name = "heatchain"
+version = "0.8.0"
+authors = ["Hyultis <hyultis@use.startmail.com>"]
+edition = "2018"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[features]
+#default = []
+default = ["dynamicresolution","steam"]
+#default = ["dynamicresolution"]
+steam = ["steamworks"]
+dynamicresolution = []
+
+[dependencies]
+#base stuff
+rand = "0.8.0"
+ahash = "0.8.6"
+dashmap = {version = "5.5.3", features = ["rayon"]}
+dyn-clone = "1.0.14"
+parking_lot = "0.12.1"
+anyhow = "1.0.75"
+rayon = "1.8.0"
+arc-swap = "1.6.0"
+indexmap = "2.0.2"
+rand_chacha = "0.3.1"
+rand_seeder = "0.2.3"
+hany-macro = { path = "../hany-macro" }
+hany = { path = "../hany" }
+HArcMut = { path = "../HArcMut" }
+singletonThread = { path = "../singletonThread" }
+bytemuck = "1.14.0"
+derive_more = { version = "1.0.0-beta.6", features = ["full"] }
+chrono = "0.4.31"
+sys-locale = "0.3.1"
+
+#data
+#vergen = "8.2.4"
+csv = "1.3.0"
+Hconfig = { path = "../Hconfig" }
+Htrace = { path = "../Htrace" }
+base64 = "0.21.5"
+json = "0.12.4"
+rsa = { version = "0.9.3", features = ["sha2"]}
+uuid = { version = "1.5.0" , features = [ "v4", "fast-rng", "macro-diagnostics"]}
+
+#graphic
+#sdl2 = "0.35.2"
+vulkano = "0.34.0"
+vulkano-shaders = "0.34.0"
+image = "0.24.7"
+palette = "0.7.3"
+ab_glyph = "0.2.22"
+glyph_brush = "0.7.8"
+glyph_brush_layout = "0.2.3"
+
+#3D
+tobj = "4.0.0"
+cgmath = "0.18.0"
+
+#ads
+steamworks = {version = "0.10.0", optional = true }
+
+#audio
+rodio = "0.17.2"
+
+[target.'cfg(not(target_os = "android"))'.dependencies]
+winit = { version = "0.29.2", features = ["rwh_05"] }
+ash = "^0.37.2"
+
+[target.'cfg(target_os = "android")'.dependencies]
+#winit = { version = "0.28.6", features = ["android-game-activity"]}
+winit = {version="0.29.3", features = ["rwh_05", "android-game-activity"]}
+ndk = { version = "0.8.0" }
+android-activity = { version = "0.5.0", features = ["game-activity"]}
+jni = { version = "0.21.1", features = ["invocation"] }
+ash = "^0.37.2"
+
+[lib]
+path= "src/main_android.rs"
+name="heatchain"
+crate_type=["cdylib"]
+
+[[bin]]
+path= "src/main_exec.rs"
+name="heatchain"
+#required-features = [ "steam" ]
