--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ bytemuck = "1.14.0"
 derive_more = { version = "1.0.0-beta.6", features = ["full"] }
 chrono = "0.4.31"
 sys-locale = "0.3.1"
+webbrowser = "0.8.12"
 
 #data
 #vergen = "8.2.4"
