--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,47 +12,48 @@ edition = "2018"
 default = ["dynamicresolution"]
 steam = ["steamworks"]
 dynamicresolution = []
+debug = []
 
 [dependencies]
 #base stuff
 rand = "0.8.0"
-ahash = "0.8.6"
+ahash = "0.8.7"
 dashmap = {version = "5.5.3", features = ["rayon"]}
-dyn-clone = "1.0.14"
+dyn-clone = "1.0.16"
 parking_lot = "0.12.1"
-anyhow = "1.0.75"
+anyhow = "1.0.79"
 rayon = "1.8.0"
 arc-swap = "1.6.0"
-indexmap = "2.0.2"
+indexmap = "2.1.0"
 rand_chacha = "0.3.1"
 rand_seeder = "0.2.3"
-hany-macro = { path = "../../rust/hany-macro" }
-hany = { path = "../../rust/hany" }
 HArcMut = { path = "../../rust/HArcMut" }
+#HArcMut = "1.0.2"
 singletonThread = { path = "../../rust/singletonThread" }
 bytemuck = "1.14.0"
 derive_more = { version = "1.0.0-beta.6", features = ["full"] }
 chrono = "0.4.31"
 sys-locale = "0.3.1"
 webbrowser = "0.8.12"
+downcast-rs = "1.2.0"
 
 #data
 #vergen = "8.2.4"
 csv = "1.3.0"
 Hconfig = { path = "../../rust/Hconfig" }
 Htrace = { path = "../../rust/Htrace" }
-base64 = "0.21.5"
+base64 = "0.21.6"
 json = "0.12.4"
-rsa = { version = "0.9.3", features = ["sha2"]}
-uuid = { version = "1.5.0" , features = [ "v4", "fast-rng", "macro-diagnostics"]}
+rsa = { version = "0.9.6", features = ["sha2"]}
+uuid = { version = "1.6.1" , features = [ "v4", "fast-rng", "macro-diagnostics"]}
 
 #graphic
 #sdl2 = "0.35.2"
-vulkano = "0.34.0"
+vulkano = "0.34.1"
 vulkano-shaders = "0.34.0"
 image = "0.24.7"
 palette = "0.7.3"
-ab_glyph = "0.2.22"
+ab_glyph = "0.2.23"
 glyph_brush = "0.7.8"
 glyph_brush_layout = "0.2.3"
 
@@ -60,18 +61,18 @@ glyph_brush_layout = "0.2.3"
 tobj = "4.0.0"
 cgmath = "0.18.0"
 
-#ads
-steamworks = {version = "0.10.0", optional = true }
+#Publisher
+steamworks = {optional = true, git="https://github.com/Noxime/steamworks-rs", rev = "a204e81" }
+#steamworks = {version = "0.10.0", optional = true } #git="https://github.com/Noxime/steamworks-rs", rev = "a204e81"
 
 #audio
-rodio = "0.17.2"
+rodio = "0.17.3"
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
 winit = { version = "0.29.2", features = ["rwh_05"] }
 ash = "^0.37.2"
 
 [target.'cfg(target_os = "android")'.dependencies]
-#winit = { version = "0.28.6", features = ["android-game-activity"]}
 winit = {version="0.29.3", features = ["rwh_05", "android-game-activity"]}
 ndk = { version = "0.8.0" }
 android-activity = { version = "0.5.0", features = ["game-activity"]}
