--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "heatchain"
-version = "1.0.0"
+version = "1.0.5"
 authors = ["Hyultis <hyultis@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
 #default = []
@@ -15,74 +14,55 @@ dynamicresolution = []
 debug = []
 
 [dependencies]
+HGE = { git="https://github.com/hyultis/Hyultis_Game_Engine", features = ["dynamicresolution","front_winit"]} # branch master
+vulkano = "0.35.1"
+vulkano-shaders = "0.35.0"
 #base stuff
 rand = "0.8.0"
 ahash = "0.8.7"
-dashmap = {version = "5.5.3", features = ["rayon"]}
-dyn-clone = "1.0.16"
+dashmap = {version = "6.0.1", features = ["rayon"]}
+rayon = "1.10.0"
 parking_lot = "0.12.1"
 anyhow = "1.0.79"
-rayon = "1.8.0"
 arc-swap = "1.6.0"
-indexmap = "2.1.0"
 rand_chacha = "0.3.1"
-rand_seeder = "0.2.3"
-HArcMut = { path = "../../rust/HArcMut" }
-#HArcMut = "1.0.2"
-singletonThread = { path = "../../rust/singletonThread" }
-bytemuck = "1.14.0"
-derive_more = { version = "1.0.0-beta.6", features = ["full"] }
+rand_seeder = "0.3.0"
+HArcMut = "1.1.1"#{ path = "../../rust/HArcMut" }
+singletonThread = "1.1.0"
 chrono = "0.4.31"
 sys-locale = "0.3.1"
-webbrowser = "0.8.12"
+webbrowser = "1.0.1"
 downcast-rs = "1.2.0"
 
 #data
-#vergen = "8.2.4"
-csv = "1.3.0"
-Hconfig = { path = "../../rust/Hconfig" }
-Htrace = { path = "../../rust/Htrace" }
-base64 = "0.21.6"
-json = "0.12.4"
+Hconfig = "1.1"
+Htrace = "1.0.2"
+base64 = "0.22.1"
 rsa = { version = "0.9.6", features = ["sha2"]}
 uuid = { version = "1.6.1" , features = [ "v4", "fast-rng", "macro-diagnostics"]}
 
 #graphic
-#sdl2 = "0.35.2"
-vulkano = "0.34.1"
-vulkano-shaders = "0.34.0"
-image = "0.24.7"
-palette = "0.7.3"
-ab_glyph = "0.2.23"
 glyph_brush = "0.7.8"
 glyph_brush_layout = "0.2.3"
 
-#3D
-tobj = "4.0.0"
-cgmath = "0.18.0"
-
 #Publisher
-steamworks = {optional = true, git="https://github.com/Noxime/steamworks-rs", rev = "a204e81" }
-#steamworks = {version = "0.10.0", optional = true } #git="https://github.com/Noxime/steamworks-rs", rev = "a204e81"
+steamworks = {optional = true,version = "0.11.0"}
 
-#audio
-rodio = "0.17.3"
-
-[target.'cfg(not(target_os = "android"))'.dependencies]
-winit = { version = "0.29.2", features = ["rwh_05"] }
-ash = "^0.37.2"
+#[target.'cfg(not(target_os = "android"))'.dependencies]
 
 [target.'cfg(target_os = "android")'.dependencies]
-winit = {version="0.29.3", features = ["rwh_05", "android-game-activity"]}
-ndk = { version = "0.8.0" }
-android-activity = { version = "0.5.0", features = ["game-activity"]}
+ndk = { version = "0.9.0" }
+#android-activity = { version = "0.6.0", features = ["game-activity"]}
 jni = { version = "0.21.1", features = ["invocation"] }
-ash = "^0.37.2"
+winit = { version = "0.30.8", features = ["rwh_06", "android-game-activity"], optional = true }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+winapi = { version = "0.3.9", features = ["wincon"] }
 
 [lib]
 path= "src/main_android.rs"
 name="heatchain"
-crate_type=["cdylib"]
+crate-type=["cdylib"]
 
 [[bin]]
 path= "src/main_exec.rs"
